--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40005ac2-031b-47ef-ad57-b68da9a3994e",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 295,
    "id": "4e7a91f7-5cee-4aa2-821f-97040832585b",
@@ -43,6 +51,14 @@
    "outputs": [],
    "source": [
     "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57603002-ecbf-4d9c-b18d-cf417aa85d0a",
+   "metadata": {},
+   "source": [
+    "### Reading the dataset."
    ]
   },
   {
@@ -408,6 +424,14 @@
    "metadata": {},
    "source": [
     "*There are total 10692 data entries*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c025933a-8dac-4110-a4da-1f86a446396f",
+   "metadata": {},
+   "source": [
+    "### Cleaning ang manipulating the data."
    ]
   },
   {
@@ -1471,6 +1495,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bc11970-f211-4267-860e-85f25aaf590d",
+   "metadata": {},
+   "source": [
+    "### Data selection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 244,
    "id": "72c2c662-200f-4cf5-94c2-6b8007a91075",
@@ -1502,6 +1534,14 @@
     "print(X_test.shape)\n",
     "print(y_train.shape)\n",
     "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cc2389c-185b-4cce-a3fe-78328434f59c",
+   "metadata": {},
+   "source": [
+    "### Model Building."
    ]
   },
   {
